logs/mplotlab.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mplotlab'...
Listing './lib/python3.5/site-packages/mplotlab/graphics'...
Listing './lib/python3.5/site-packages/mplotlab/models'...
Compiling './lib/python3.5/site-packages/mplotlab/models/Source.py'...
***   File "./lib/python3.5/site-packages/mplotlab/models/Source.py", line 75
    print "connecting %s:%d ..." %(host,port)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mplotlab/mpl_builders'...
Compiling './lib/python3.5/site-packages/mplotlab/mpl_builders/mpl_animations.py'...
***   File "./lib/python3.5/site-packages/mplotlab/mpl_builders/mpl_animations.py", line 8
    print "updating artists %s ...."%artists
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mplotlab/utils'...
Compiling './lib/python3.5/site-packages/mplotlab/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/mplotlab/utils/__init__.py", line 56
    print "# TEST 1"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mplotlab-0.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
